--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "glob": "^7.1.2",
     "istanbul": "^0.4.5",
     "jsdoc": "^3.5.5",
+    "list": "^2.0.16",
     "zora": "^2.0.1"
   },
   "dependencies": {
